# dotnet5-redist

./: Cargo.toml  build.rs  dotnet-redist.rc  dotnet5-webinst.rc
.github/workflows/: main.yml
src/: http.rs  main.rs
