cargo-features = ["strip"]

[package]
name = "dotnet-installer"
version = "0.1.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
clap = "2"
semver = "0.11.0"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
tempfile = "3"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic="abort"