
[package]
name = "dotnet5-webinst"
version = "0.1.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
clap = "2"
semver = "0.11.0"
smol = "1"
tempfile = "3"
http-types = "2.9.0"
async-h1 = "2.2.1"
async-rustls = "0.1.2"
webpki-roots = "0.21.0"

[build-dependencies]
embed-resource = "1.1"

[profile.release]
lto = true